@@ -14,10 +14,10 @@ public sealed interface PurchasedItem permits OneItemByUnit, ItemByWeight, NItem
      * The purchased products are all sold in euros.
      */
     public static String EURO_SYMBOL = "€";
-    public static Locale SPANISH_LOCALE = new Locale("es", "ES");
+    public static Locale SPANISH_LOCALE = Locale.of("es", "ES");
     public static NumberFormat SPANISH_PRICE_FORMAT = NumberFormat.getCurrencyInstance(SPANISH_LOCALE);
 
-    public static String REGEX_CANTIDAD = "\\s*(?<cantidad>\\d+)";
+    public static String REGEX_CANTIDA  D = "\\s*(?<cantidad>\\d+)";
     public static String REGEX_ID = "(.*?)(?<id>[0-9A-ZÑÁÉÍÓÚ`,%\\+\\/\\.\\s\\-]+)";
     public static String REGEX_PRECIO_UNIDAD = "(?<precioUnidad>\\d*,\\d{2})";
     public static String REGEX_PRECIO = "(?<precio>\\d*,\\d{2})";
